--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -11,14 +11,14 @@ repository:
 branches:
   - name: main
     protection:
-      enforce_admins: false
+      enforce_admins: true
       required_pull_request_reviews:
         required_approving_review_count: 1
         require_code_owner_reviews: true
 
   - name: "releases/*"
     protection:
-      enforce_admins: false
+      enforce_admins: true
       required_pull_request_reviews:
         required_approving_review_count: 1
         require_code_owner_reviews: true
