--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -8,23 +8,24 @@ repository:
   squash_merge_commit_title: PR_TITLE
   squash_merge_commit_message: PR_BODY
 
-rulesets:
-  - name: default-ruleset
-    target: branch
-    enforcement: active
-    conditions:
-      ref_name:
-        include:
-          - "~DEFAULT_BRANCH"
-          - "refs/heads/releases/*"
-        exclude: []
-    rules:
-      - type: pull_request
-        parameters:
-          required_approving_review_count: 1
-          require_code_owner_review: true
+# Does not currently work. Import the ruleset manually.
+# rulesets:
+#   - name: default-ruleset
+#     target: branch
+#     enforcement: active
+#     conditions:
+#       ref_name:
+#         include:
+#           - "~DEFAULT_BRANCH"
+#           - "refs/heads/releases/*"
+#         exclude: []
+#     rules:
+#       - type: pull_request
+#         parameters:
+#           required_approving_review_count: 1
+#           require_code_owner_review: true
 
-    bypass_actors:
-      - actor_id: 5
-        actor_type: RepositoryRole
-        bypass_mode: always
+#     bypass_actors:
+#       - actor_id: 5
+#         actor_type: RepositoryRole
+#         bypass_mode: always
